Esercizi openapi e controllers
